@@ -659,19 +659,13 @@ name|success
 init|=
 literal|false
 decl_stmt|;
-synchronized|synchronized
-init|(
-name|this
-init|)
+try|try
 block|{
 name|deleteQueue
 operator|.
 name|clear
 argument_list|()
 expr_stmt|;
-block|}
-try|try
-block|{
 if|if
 condition|(
 name|infoStream
@@ -787,6 +781,11 @@ argument_list|()
 expr_stmt|;
 block|}
 block|}
+name|flushControl
+operator|.
+name|abortPendingFlushes
+argument_list|()
+expr_stmt|;
 name|flushControl
 operator|.
 name|waitForFlush
