@@ -2491,6 +2491,26 @@ parameter_list|()
 block|{
 try|try
 block|{
+name|abortPendingFlushes
+argument_list|()
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|fullFlush
+operator|=
+literal|false
+expr_stmt|;
+block|}
+block|}
+DECL|method|abortPendingFlushes
+specifier|synchronized
+name|void
+name|abortPendingFlushes
+parameter_list|()
+block|{
+try|try
+block|{
 for|for
 control|(
 name|DocumentsWriterPerThread
@@ -2499,16 +2519,27 @@ range|:
 name|flushQueue
 control|)
 block|{
-name|doAfterFlush
-argument_list|(
-name|dwpt
-argument_list|)
-expr_stmt|;
+try|try
+block|{
 name|dwpt
 operator|.
 name|abort
 argument_list|()
 expr_stmt|;
+name|doAfterFlush
+argument_list|(
+name|dwpt
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Throwable
+name|ex
+parameter_list|)
+block|{
+comment|// ignore - keep on aborting the flush queue
+block|}
 block|}
 for|for
 control|(
@@ -2517,6 +2548,8 @@ name|blockedFlush
 range|:
 name|blockedFlushes
 control|)
+block|{
+try|try
 block|{
 name|flushingWriters
 operator|.
@@ -2536,13 +2569,6 @@ name|bytes
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|doAfterFlush
-argument_list|(
-name|blockedFlush
-operator|.
-name|dwpt
-argument_list|)
-expr_stmt|;
 name|blockedFlush
 operator|.
 name|dwpt
@@ -2550,14 +2576,26 @@ operator|.
 name|abort
 argument_list|()
 expr_stmt|;
+name|doAfterFlush
+argument_list|(
+name|blockedFlush
+operator|.
+name|dwpt
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Throwable
+name|ex
+parameter_list|)
+block|{
+comment|// ignore - keep on aborting the blocked queue
+block|}
 block|}
 block|}
 finally|finally
 block|{
-name|fullFlush
-operator|=
-literal|false
-expr_stmt|;
 name|flushQueue
 operator|.
 name|clear
